Putting together styles and changing color scheme

--- a/Client/src/app/modules/article/components/article-info/article-info.html
+++ b/Client/src/app/modules/article/components/article-info/article-info.html
@@ -1,3 +1,8 @@
-<div class="articleHeader">
-  <label>{{articleHeader.name}}</label>
-</div>
+  <div class="articleHeader">
+    <label>{{articleHeader.name}}</label>
+    <div class="articleRightHeader">
+      <label class="articleAuthor">{{articleHeader.author}}</label>
+      <label class="articleSpacer"> | </label>
+      <label class="articleTimestamp">{{articleHeader.timestamp}}</label>
+    </div>
+ </div>
