--- a/Client/src/app/shared/components/button-selection/button-selection.html
+++ b/Client/src/app/shared/components/button-selection/button-selection.html
@@ -1,3 +1,3 @@
 <div>
-  <button class="selectionButton" [routerLink]="routerLink">{{name}}</button>
+  <button class="buttonSelection">{{name}}</button>
 </div>
