--- a/Client/src/app/shared/components/list-selection/listselection.scss
+++ b/Client/src/app/shared/components/list-selection/listselection.scss
@@ -6,10 +6,9 @@
   background-color: $dominant-color;
   color: $default-text-color;
   padding: 5pt;
-  margin: 3pt;
   border-style: solid;
   border-color: gray;
-  font-size: 10pt;
+  font-size: 10;
   border-radius: 10pt 10pt 10pt 10pt;
 	transition-duration : 0.6s;
   font-weight: bold;
