Integration with the server
Introduced server integration.
Changed the feed-list and archive-list to get data from the server.
Still missing ability to post article from editor.

--- a/Client/src/app/modules/editor/components/editor/editor.html
+++ b/Client/src/app/modules/editor/components/editor/editor.html
@@ -4,19 +4,19 @@
       <h3>Title</h3>
     </div>
     <div>
-      <input />
+      <input [(ngModel)]="fileName"/>
     </div>
     <div>
       <h3>Content</h3>
     </div>
     <div>
-      <textarea class="editorTextArea"></textarea>
+      <textarea class="editorTextArea" [(ngModel)]="fileContent"></textarea>
     </div>
-    <button-selection [name]="'Send file'"></button-selection>
+    <button-selection [name]="'Send file'" (click)="onSendFile()"></button-selection>
   </div>
 
   <div class="rightColumn">
-    <button-selection (click)="onUploadFile()" [name]="'Upload existing file'">Test</button-selection>
+    <button-selection [name]="'Upload existing file'" (click)="onUploadFile()" >Test</button-selection>
     
 <div *ngIf="this.IsUploadVisible">
   <hr/>
