--- a/Client/src/app/modules/article/components/article-info/article-info.html
+++ b/Client/src/app/modules/article/components/article-info/article-info.html
@@ -3,6 +3,6 @@
     <div class="articleRightHeader">
       <label class="articleAuthor">{{articleHeader.author}}</label>
       <label class="articleSpacer"> | </label>
-      <label class="articleTimestamp">{{articleHeader.timeCreated}}</label>
+      <label class="articleTimestamp">{{articleHeader.timeCreated | date:'medium'}}</label>
     </div>
  </div>
