--- a/Client/src/app/modules/article/components/article-preview/article-preview.html
+++ b/Client/src/app/modules/article/components/article-preview/article-preview.html
@@ -4,7 +4,7 @@
     <div class="articleRightHeader">
       <label class="articleAuthor">{{articleModel.header.author}}</label>
       <label class="articleSpacer"> | </label>
-      <label class="articleTimestamp">{{articleModel.header.timeCreated}}</label>
+      <label class="articleTimestamp">{{articleModel.header.timeCreated | date:'medium'}}</label>
     </div>
   </div>
 
