--- a/Client/src/assets/scss/styles.scss
+++ b/Client/src/assets/scss/styles.scss
@@ -1,4 +1,5 @@
 @import "global-variables";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 body
 {
@@ -9,25 +10,28 @@ body
 }
 
 ul {
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
+  padding: 0;
+	margin: 0;
+	list-style-type: none;
 }
 
 li{
-    margin-bottom: 20pt;
-}
-
-.LogoTextArea {
-  font-weight: bold;
-  opacity: 0;
+  margin-bottom: 20pt;
 }
 
 .UpperBar
 {
 	font-weight : bold;
+	background-color : $dominant-color;
+	overflow: auto;
+}
+
+.UpperBarLeft
+{
+	font-weight : bold;
 	padding : 10pt;
 	background-color : $dominant-color;
+	float: left;
 }
 
 .MenuButton
@@ -39,10 +43,19 @@ li{
 	padding : 10pt;
 	background-color : $sub-dominant-color;
 	border-radius: 0pt 0pt 10pt 10pt;
-	transition-duration : 0.6s;
 }
 
 button:hover {
   background-color: $complementary-color;
-  color: white;
+	color: white;
+	transition-duration : 0.6s;
+}
+
+.UpperBarButton {
+	font-weight : bold;
+	color: white;
+	background: none;
+	border: none;
+	padding : 10pt;
+	float: right;
 }
