--- a/Client/wwwroot/assets/scss/styles.scss
+++ b/Client/wwwroot/assets/scss/styles.scss
@@ -1,9 +1,21 @@
+@import "global-variables";
+
 body
 {
+  width: 100%;
 	font-family : Tahoma, Geneva, sans-serif;
 	color : white;
-	overflow-y: scroll;
   overflow-x: hidden;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+li{
+    margin-bottom: 20pt;
 }
 
 .LogoTextArea {
@@ -15,7 +27,7 @@ body
 {
 	font-weight : bold;
 	padding : 10pt;
-	background-color : #000066;
+	background-color : $dominant-color;
 }
 
 .MenuButton
@@ -23,14 +35,14 @@ body
 	box-shadow: 0pt 2pt #AAAAAA;
 	font-weight : bold;
 	border : none;
-	color : white;
+	color : $complementary-color;
 	padding : 10pt;
-	background-color : #000099;
+	background-color : $sub-dominant-color;
 	border-radius: 0pt 0pt 10pt 10pt;
 	transition-duration : 0.6s;
 }
 
-.MenuButton:hover {
-  background-color: #666666;
+button:hover {
+  background-color: $complementary-color;
   color: white;
 }
